# sedock

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  USAGE.md  build.rs
.cargo/: config.toml
src/: cli.rs  main.rs
src/check/: collector.rs  container.rs  engine.rs  events.rs  host.rs  mod.rs  output.rs  report.rs
src/monitor/: event.rs  fanotify.rs  mod.rs  process.rs
src/utils/: error.rs  mod.rs  types.rs
