[package]
name = "sedocker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Docker monitoring and inspection tool"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.27", features = ["fs", "process", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"     # 优化大小
lto = true          # Link Time Optimization
codegen-units = 1   # 更好的优化
strip = true        # 移除符号
panic = "abort"     # 减少二进制大小

[profile.release.package."*"]
opt-level = "z"